# blue-green-demo

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: gcp-deploy.yml
config/: settings.py  urls.py
myapp/: views.py
